; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/subversion/subversion/libsvn_client/extr_merge.c_find_unmerged_mergeinfo_subroutine.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/subversion/subversion/libsvn_client/extr_merge.c_find_unmerged_mergeinfo_subroutine.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32 }

@SVN_INVALID_REVNUM = common dso_local global i32 0, align 4
@TRUE = common dso_local global i32 0, align 4
@SVN_NO_ERROR = common dso_local global i32* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i32*, i32, i32, %struct.TYPE_4__*, i32*, i32*, i32*, i32*)* @find_unmerged_mergeinfo_subroutine to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @find_unmerged_mergeinfo_subroutine(i32* %0, i32 %1, i32 %2, %struct.TYPE_4__* %3, i32* %4, i32* %5, i32* %6, i32* %7) #0 {
  %9 = alloca i32*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca %struct.TYPE_4__*, align 8
  %13 = alloca i32*, align 8
  %14 = alloca i32*, align 8
  %15 = alloca i32*, align 8
  %16 = alloca i32*, align 8
  %17 = alloca i32, align 4
  store i32* %0, i32** %9, align 8
  store i32 %1, i32* %10, align 4
  store i32 %2, i32* %11, align 4
  store %struct.TYPE_4__* %3, %struct.TYPE_4__** %12, align 8
  store i32* %4, i32** %13, align 8
  store i32* %5, i32** %14, align 8
  store i32* %6, i32** %15, align 8
  store i32* %7, i32** %16, align 8
  %18 = load %struct.TYPE_4__*, %struct.TYPE_4__** %12, align 8
  %19 = load %struct.TYPE_4__*, %struct.TYPE_4__** %12, align 8
  %20 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %19, i32 0, i32 0
  %21 = load i32, i32* %20, align 4
  %22 = load i32, i32* @SVN_INVALID_REVNUM, align 4
  %23 = load i32*, i32** %13, align 8
  %24 = load i32*, i32** %14, align 8
  %25 = load i32*, i32** %16, align 8
  %26 = call i32 @svn_client__get_history_as_mergeinfo(i32* %17, i32* null, %struct.TYPE_4__* %18, i32 %21, i32 %22, i32* %23, i32* %24, i32* %25)
  %27 = call i32 @SVN_ERR(i32 %26)
  %28 = load i32, i32* %11, align 4
  %29 = load i32, i32* %17, align 4
  %30 = load i32*, i32** %16, align 8
  %31 = load i32*, i32** %16, align 8
  %32 = call i32 @svn_mergeinfo_merge2(i32 %28, i32 %29, i32* %30, i32* %31)
  %33 = call i32 @SVN_ERR(i32 %32)
  %34 = load i32*, i32** %9, align 8
  %35 = load i32, i32* %11, align 4
  %36 = load i32, i32* %10, align 4
  %37 = load i32, i32* @TRUE, align 4
  %38 = load i32*, i32** %15, align 8
  %39 = load i32*, i32** %16, align 8
  %40 = call i32 @svn_mergeinfo_remove2(i32* %34, i32 %35, i32 %36, i32 %37, i32* %38, i32* %39)
  %41 = call i32 @SVN_ERR(i32 %40)
  %42 = load i32*, i32** @SVN_NO_ERROR, align 8
  ret i32* %42
}

declare dso_local i32 @SVN_ERR(i32) #1

declare dso_local i32 @svn_client__get_history_as_mergeinfo(i32*, i32*, %struct.TYPE_4__*, i32, i32, i32*, i32*, i32*) #1

declare dso_local i32 @svn_mergeinfo_merge2(i32, i32, i32*, i32*) #1

declare dso_local i32 @svn_mergeinfo_remove2(i32*, i32, i32, i32, i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
